# SDL2Game

./: README.md  SDL2Game.sln
SDL2Game/: CMakeLists.txt  Main.cpp  SDL2Game.vcxproj
